Fix inability to see all content on small resolutions

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,6 @@ a:hover {
 
 html, body {
   height: 100%;
-  overflow: hidden;
 }
 
 body {
@@ -79,9 +78,6 @@ footer {
 }
 
 @media all and (max-width: 640px) {
-  html, body {
-    overflow: auto;
-  }
 
   body {
     background: #fff;
